--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li class="nav-item"><a class="nav-link active" href="#">First Item</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Second Item</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Third Item</a></li>
-                </ul><a class="btn btn-primary ms-md-2" role="button" href="#">Button</a>
+                </ul>
             </div>
         </div>
     </nav>
@@ -31,7 +31,7 @@
             <div class="col-md-6 col-xl-5 offset-xl-0 d-md-flex align-items-md-center">
                 <div style="max-width: 350px;">
                     <h2 class="text-uppercase fw-bold">cihuy rasakan nikmatnya di setiap gigitan&nbsp;&nbsp;</h2>
-                    <p class="my-3" style="text-align: justify;font-size: 15px;backdrop-filter: saturate(102%);--bs-body-font-weight: bold;--bs-body-font-size: 10rem;"><span style="color: rgb(49, 53, 58);">Kalian tim mana Cireng pedes atau cireng original? apapun seleranya, tetap cireng pilihanya. cireng&nbsp; isinya full, bikin hari-hari lebih semangat</span><br><br></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">LIHAT PRODUK</a>
+                    <p class="my-3" style="text-align: justify;font-size: 15px;backdrop-filter: saturate(102%);--bs-body-font-weight: bold;--bs-body-font-size: 10rem;"><span style="color: rgb(49, 53, 58);">Kalian tim mana Cireng pedes atau cireng original? apapun seleranya, tetap cireng pilihanya. cireng&nbsp; isinya full, bikin hari-hari lebih semangat</span><br><br></p><a class="btn btn-primary btn-lg me-2" role="button" href="#https://www.instagram.com/cihuyy555._?igsh=NWE5cHp6cWNyczRv">LIHAT PRODUK</a>
                 </div>
             </div>
         </div>
@@ -291,7 +291,7 @@
             <div class="text-white bg-dark border rounded border-0 p-4 p-md-5">
                 <h2 class="fw-bold text-white mb-3">Jangan lewatkan kelezatan cireng cihuyy! pesan sekarang dan rasakan kenikmatanya!</h2>
                 <p class="mb-4">Rasakan perpaduan rasa pedas dan gurih yang menyatuh dan rasakan kenikmatan disetiap gigitannya&nbsp;</p>
-                <div class="my-3"><a href="https://www.instagram.com/cihuyy555._?igsh=bDM5bmd1azlhaW5y"><a class="btn btn-primary btn-lg me-2" role="button" href="#">Order Sekarang</a></a></div>
+                <div class="my-3"><a href="https://www.instagram.com/cihuyy555._?igsh=bDM5bmd1azlhaW5y"><a class="btn btn-primary btn-lg me-2" role="button" href="#https://www.instagram.com/cihuyy555._?igsh=NWE5cHp6cWNyczRv">Order Sekarang</a></a></div>
             </div>
         </div>
     </section>
@@ -323,7 +323,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social">
-                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img width="36" height="36" style="margin: -23px;margin-bottom: -29px;height: 38px;width: 35px;" src="assets/img/WhatsApp%20Image%202025-05-16%20at%2007.50.36.jpeg"></span><span>CIHUY</span></div>
+                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img width="36" height="36" style="margin: -23px;margin-bottom: -29px;height: 38px;width: 35px;" src="assets/img/WhatsApp%20Image%202025-05-16%20at%2007.50.36.jpeg"></span><span>Brand</span></div>
                     <p class="text-muted copyright">Sem eleifend donec molestie, integer quisque orci aliquam.</p>
                 </div>
             </div>
