--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social">
-                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img width="36" height="36" style="margin: -23px;margin-bottom: -29px;height: 38px;width: 35px;" src="assets/img/WhatsApp%20Image%202025-05-16%20at%2007.50.36.jpeg"></span><span>Brand</span></div>
+                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img width="36" height="36" style="margin: -23px;margin-bottom: -29px;height: 38px;width: 35px;" src="assets/img/WhatsApp%20Image%202025-05-16%20at%2007.50.36.jpeg"></span><span>CIHUY</span></div>
                     <p class="text-muted copyright">Sem eleifend donec molestie, integer quisque orci aliquam.</p>
                 </div>
             </div>
