--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-md-6 col-xl-5 offset-xl-0 d-md-flex align-items-md-center">
                 <div style="max-width: 350px;">
                     <h2 class="text-uppercase fw-bold">cihuy rasakan nikmatnya di setiap gigitan&nbsp;&nbsp;</h2>
-                    <p class="my-3" style="text-align: justify;font-size: 15px;backdrop-filter: saturate(102%);--bs-body-font-weight: bold;--bs-body-font-size: 10rem;"><span style="color: rgb(49, 53, 58);">Kalian tim mana Cireng pedes atau cireng original? apapun seleranya, tetap cireng pilihanya. cireng&nbsp; isinya full, bikin hari-hari lebih semangat</span><br><br></p><a class="btn btn-primary btn-lg me-2" role="button" href="#https://www.instagram.com/cihuyy555._?igsh=NWE5cHp6cWNyczRv">LIHAT PRODUK</a>
+                    <p class="my-3" style="text-align: justify;font-size: 15px;backdrop-filter: saturate(102%);--bs-body-font-weight: bold;--bs-body-font-size: 10rem;"><span style="color: rgb(49, 53, 58);">Kalian tim mana Cireng pedes atau cireng original? apapun seleranya, tetap cireng pilihanya. cireng&nbsp; isinya full, bikin hari-hari lebih semangat</span><br><br></p><a class="btn btn-primary btn-lg me-2" role="button" href="https://www.instagram.com/cihuyy555._?igsh=bDM5bmd1azlhaW5y">LIHAT PRODUK</a>
                 </div>
             </div>
         </div>
@@ -291,7 +291,7 @@
             <div class="text-white bg-dark border rounded border-0 p-4 p-md-5">
                 <h2 class="fw-bold text-white mb-3">Jangan lewatkan kelezatan cireng cihuyy! pesan sekarang dan rasakan kenikmatanya!</h2>
                 <p class="mb-4">Rasakan perpaduan rasa pedas dan gurih yang menyatuh dan rasakan kenikmatan disetiap gigitannya&nbsp;</p>
-                <div class="my-3"><a href="https://www.instagram.com/cihuyy555._?igsh=bDM5bmd1azlhaW5y"><a class="btn btn-primary btn-lg me-2" role="button" href="#https://www.instagram.com/cihuyy555._?igsh=NWE5cHp6cWNyczRv">Order Sekarang</a></a></div>
+                <div class="my-3"><a href="https://www.instagram.com/cihuyy555._?igsh=bDM5bmd1azlhaW5y"><a class="btn btn-primary btn-lg me-2" role="button" href="https://www.instagram.com/cihuyy555._?igsh=bDM5bmd1azlhaW5y">Order Sekarang</a></a></div>
             </div>
         </div>
     </section>
