--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>ciiihuuuuuuuuyyyyyyyyyyyyyuyyyyyyyyy</title>
+    <title>cihuy revisi</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Features-Cards-icons.css">
     <link rel="stylesheet" href="assets/css/Hero-Clean-images.css">
@@ -16,9 +16,8 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><img width="36" height="36" style="margin: -23px;margin-bottom: -29px;height: 38px;width: 35px;" src="assets/img/WhatsApp%20Image%202025-05-16%20at%2007.50.36.jpeg"></span><span>CIHUY</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">First Item</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Second Item</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Third Item</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
                 </ul>
             </div>
         </div>
@@ -28,10 +27,10 @@
             <div class="col-md-6"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;margin-top: -145px;--bs-body-font-size: -1rem;padding-top: 145px;margin-bottom: -319px;padding-bottom: 316px;" src="assets/img/WhatsApp%20Image%202025-05-16%20at%2011.42.27.jpeg" width="546" height="1043">
                 <div class="p-xl-5 m-xl-5"></div>
             </div>
-            <div class="col-md-6 col-xl-5 offset-xl-0 d-md-flex align-items-md-center">
+            <div class="col-md-6 col-lg-6 col-xl-5 offset-xl-0 d-md-flex align-items-md-center">
                 <div style="max-width: 350px;">
                     <h2 class="text-uppercase fw-bold">cihuy rasakan nikmatnya di setiap gigitan&nbsp;&nbsp;</h2>
-                    <p class="my-3" style="text-align: justify;font-size: 15px;backdrop-filter: saturate(102%);--bs-body-font-weight: bold;--bs-body-font-size: 10rem;"><span style="color: rgb(49, 53, 58);">Kalian tim mana Cireng pedes atau cireng original? apapun seleranya, tetap cireng pilihanya. cireng&nbsp; isinya full, bikin hari-hari lebih semangat</span><br><br></p><a class="btn btn-primary btn-lg me-2" role="button" href="https://www.instagram.com/cihuyy555._?igsh=bDM5bmd1azlhaW5y">LIHAT PRODUK</a>
+                    <p class="my-3" style="text-align: justify;font-size: 15px;backdrop-filter: saturate(102%);--bs-body-font-weight: bold;--bs-body-font-size: 10rem;"><span style="color: rgb(49, 53, 58);">Kalian tim mana Cireng pedes atau cireng original? apapun seleranya, tetap cireng pilihanya. cireng&nbsp; isinya full, bikin hari-hari lebih semangat</span><br><br></p><a class="btn btn-primary btn-lg me-2" role="button" href="#cirengisi">LIHAT PRODUK</a>
                 </div>
             </div>
         </div>
@@ -134,7 +133,7 @@
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
                         <h2 class="text-uppercase fw-bold mb-3">tentang kami&nbsp;</h2>
-                        <p class="mb-4">Cireng isi cihuy di dirikan pada tahun 2025 sebagai usaha yang berfokus pada cemilan yang bisa di coba oleh semua kalangan seperti orang dewasa sampai anak anak. kami mengunakan bahan bahan premium dan alat-alat yang canggih.&nbsp; proses ini menghasilkan cireng isi yang kenyal, berisi berlimpah dan rasanya meresap sempurna. kami selalu menjaga standar kebersihan dalam proses produksi yang nikmat untuk di konsumsi.</p>
+                        <p class="mb-4" style="text-align: justify;">Cireng isi cihuy di dirikan pada tahun 2025 sebagai usaha yang berfokus pada cemilan yang bisa di coba oleh semua kalangan seperti orang dewasa sampai anak anak. kami mengunakan bahan bahan&nbsp; premium dan alat-alat yang canggih.&nbsp; proses ini menghasilkan cireng isi yang kenyal, berisi berlimpah dan rasanya meresap sempurna. kami selalu menjaga standar kebersihan dalam proses produksi yang nikmat untuk di konsumsi.</p>
                     </div>
                 </div>
             </div>
@@ -195,7 +194,7 @@
             </div>
         </div>
     </section>
-    <section class="photo-gallery py-4 py-xl-5">
+    <section id="cirengisi" class="photo-gallery py-4 py-xl-5">
         <div class="container">
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                 <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/0ade8f9709e172f1199347d19d7eadbe.jpg"></a></div>
